--- a/internetsecurity/style.css
+++ b/internetsecurity/style.css
@@ -20,10 +20,8 @@ main{
     display: flex;
     flex-direction: column;
     justify-content: center;
-    align-items: center;
-    background-color: black;
+    align-items: center;;
     background: url('../assets/background_image.jpg');
-    background-color : black;
     background-repeat: no-repeat;
     background-size: cover;
     background-position: center;
