--- a/internetsecurity/style.css
+++ b/internetsecurity/style.css
@@ -20,7 +20,7 @@ main{
     display: flex;
     flex-direction: column;
     justify-content: center;
-    align-items: center;;
+    align-items: center;
     background: url(../background-image.jpg);
 }
 
