--- a/internetsecurity/style.css
+++ b/internetsecurity/style.css
@@ -21,7 +21,7 @@ main{
     flex-direction: column;
     justify-content: center;
     align-items: center;
-    background: url(../background-image.jpg);
+    background: url("../background-image.jpg");
 }
 
 .game-quiz-container{
