--- a/internetsecurity/style.css
+++ b/internetsecurity/style.css
@@ -11,7 +11,7 @@ html, body{
 
 body{
     font-family: 'Montserrat', serif;
-    background: black;
+    
 }
 
 main{
@@ -21,7 +21,7 @@ main{
     flex-direction: column;
     justify-content: center;
     align-items: center;
-    
+    background: rgb("0 ,0 ,0");
 }
 
 .game-quiz-container{
